# ADTA_5410

./: .all-contributorsrc  .env.example  .gitignore  Project Proposal.docx  README.md  pyproject.toml  sp01_collection.ipynb  sp02_eda.ipynb  sp03_feature.ipynb
k3s_deployments/juypter/: jupyter-pv.yaml  jupyter-pvc.yaml  juypter-configmap.yaml  juypter-deployment.yaml  juypter-svc.yaml
k3s_deployments/postgres/: postgres-configmap.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-svc.yaml
utilities/: api.py  classify.py  common.py  data_utils.py  db_tools.py
